--- a/latex/math/Linear Algebra.tex
+++ b/latex/math/Linear Algebra.tex
@@ -11,7 +11,7 @@
 \usepackage{bm}
 \usepackage{calc}
 
-\usepackage{physics}
+\usepackage[italicdiff]{physics}
 \usepackage{adjustbox}
 \usepackage{balance}
 \usepackage{pgfplots}
@@ -33,6 +33,8 @@
 
 \newcommand{\cvec}[2]{#1\uvec{#2}}
 \newcommand{\veccomp}[4][]{\cvec{#2}{i^{#1}} + \cvec{#3}{j^{#1}} + \cvec{#4}{k^{#1}}}
+
+%\newcommand{\crossproduct}{\times}
 %%%%%%%%%%%%%%%%%%%%
 
 
@@ -50,7 +52,7 @@
 
 \maketitle
 
-\subfile{./matrix.tex}
+\subfile{./chapter/matrix.tex}
 
 
 \end{document}
